# video-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.review.config.mjs  tsconfig.json  tsconfig.ui.json  vitest.config.ts
.claude/: settings.json
.hotsheet/: settings.json
desktop/: README.md
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: open_folder.toml  open_video.toml  reveal_in_finder.toml  sidecar_send.toml
desktop/src-tauri/src/: lib.rs  main.rs
docs/: audio-events.md  captions.md  desktop-app-agent-bridge.md  desktop-app-analyze.md  desktop-app-claude-bridge.md  desktop-app-design.md  desktop-app-export.md  desktop-app-import.md  desktop-app-permissions.md  desktop-app-review.md  desktop-app-single-source.md  desktop-app.md  editor-handoff.md  fcp-audio-compat.md  feature-coverage.md  kerfjs-ui.md  manual-test-plan.md  multicam-auto-cut.md  multicam-review-ui.md  multicam-sync.md  multicam.md  multiple-sources.md  releasing.md  render-transitions.md  requirements.md  transitions.md  visual-saliency.md
promo-assets/: build-hotsheet-captions.mjs  build-hotsheet-word.mjs  build-teaser.sh  package-lock.json  package.json
scripts/: gen-readme-media.sh  gen-readme-samples.sh  release.sh
src/: analyzer-cli.ts  analyzer-state.ts  analyzer.ts  ffmpeg.ts  ollama.ts  resumable-error.ts  scene-math.ts
tests/: fcpxml.test.ts  (+30 more)
(+94 files in other folders)
