[package]
name = "video-studio-desktop"
version = "0.1.0"
description = "video-studio desktop app (VS-76)"
edition = "2021"

[lib]
name = "video_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
